<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Wavenote</string>
    <string name="app_launcher_name" translatable="false">@string/app_name</string>
    <string name="tag_hint">Add tag&#8230;</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="new_note">New Note</string>
    <string name="account">Account</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="words">Words</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="tag_name">Tag name</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="confirm_empty_trash">Are you sure you want to empty the trash?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word">Word</string>
    <string name="title">Title</string>
    <string name="more_info">More Information</string>
    <string name="note_selected">%d note selected</string>
    <string name="notes_selected">%d notes selected</string>
    <string name="note_added">Note added</string>
    <string name="search_notes">Search Notes or Tags</string>
    <string name="search_hint">Search notes or tags</string>
    <string name="search_tags">Search Tags</string>
    <string name="search_tags_hint">Search tags</string>
    <string name="search_chords">Search Chords</string>
    <string name="notes">Notes</string>
    <string name="trash">Trash</string>
    <string name="untagged_notes">Untagged Notes</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="information">Information</string>
    <string name="tags">Tags</string>
    <string name="edit">Edit</string>
    <string name="pin">Pin</string>
    <string name="toggle_pin">Toggle Pin to Top</string>
    <string name="pin_to_top">Pin to Top</string>
    <string name="unpin_from_top">Unpin from Top</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="tab_edit">Edit</string>
    <string name="tab_preview">Preview</string>
    <string name="list_hide">Hide List</string>
    <string name="list_show">Show List</string>
    <string name="markdown">Markdown</string>
    <string name="markdown_hide">Hide Markdown</string>
    <string name="markdown_show">Show Markdown</string>
    <string name="character">Character</string>
    <string name="characters">Characters</string>
    <string name="logo">Logo</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy" tools:ignore="PrivateResource">Copy</string>
    <string name="more_options">More Options</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="of">of</string>
    <string name="editor">Editor</string>
    <string name="condensed_note_list">Condensed note list</string>
    <string name="sort_order">Sort order</string>
    <string name="detect_links">Detect links</string>
    <string name="detect_chords">Detect chords</string>
    <string name="detect_keywords">Detect keywords</string>
    <string name="directory">Directory</string>
    <string name="path">Path</string>
    <string name="undo">Undo</string>
    <string name="note_deleted">Note trashed</string>
    <string name="notes_trashed">Notes trashed</string>
    <string name="welcome_note"><![CDATA[Welcome to Wavenote!<br>Open this note for instructions.<br><br><br><b>Notes</b><br><br><br>To create a new note, tap the purple \"New Note\" button with the plus icon.<br><br><br>To search your notes, tap the \"Search\" button with the magnifying glass icon and enter any text. Wavenote will show you recent searches initially and suggested searches while entering text. Notes matching the entered text will be shown once the search is submitted.<br><br><br>Got a really important note? Pin it to the top of the note list. You can pin a note in two ways. Long-press the note in the list and tap the \"Pin to top\" button with the pin icon.<br><br><br>Use tags to help organize your notes. Create a tag in the \"Add tag\" field at the bottom of a note. You can also add an email address as a tag to share a note with someone.<br><br><br>Deleted notes go in the trash. You can restore them if you want, or empty the trash to get rid of them forever.<br><br><br><b>Editor</b><br><br><br>Create your note style. Select a text styling mode by holding the \"Palette\" button in the editor and then select the text and tap it again. If you don\'t like it, you can always clear the style by choosing the first colour and try again.<br><br><br>In the editor menu, you can also turn on the syllable counting mode.<br><br><br>Automate text formatting with smart keyword and chord highlighting. Add words directly from the editor or go to settings to edit your keyword dictionary.<br><br><br><b>Lookup</b><br><br><br>Find words definitions, rhymes, synonyms and more using this feature. To open search dialog tap \"Words\" button in editor menu. You can enter both words and phrases, however only English is supported.<br><br><br><b>Chords</b><br><br><br>Enter a chord manually or copy and paste the lyrics and then on the \"Chords\" button in the top bar. Take a fresh look with this feature. Tap on a chord to see the fingerings. Can\'t find it? Use the chord search. To hide song lyrics press the \"Grid\" button.<br>Need to transpose? Do it just in one click.<br><br><br><b>Photos</b><br><br><br>Save photos to notes. Set names and sort them by date or alphabet. See them in the feed or go full screen to transform or rotate.<br><br><br><b>Studio</b><br><br><br>Create a multi-track recording. If you need perfect accuracy, calibrate playback delay by tapping the \"Adjust record\" button.<br><br><br><b>Metronome</b><br><br><br>Use the smart \"Tap\" button to determine the tempo of the music. Load your sound samples in this metronome in two clicks, it will automatically convert and calibrate them.<br><br><br><b>Share</b><br><br><br>Easily share notes with other Android apps by tapping the \"Share\" button in note menu. You can also export and import all of your data from note to files (text, photo, audio and more). Supported zip archives with encryption.<br><br><br>You can access your notes on your other devices using account sync, but this feature is in beta and may work unstably.<br><br><br>We recommend using the \"Export & Import\" feature to send files to other devices. In this case, your media files and settings will also be added. To back up and transfer all your notes find \"Export & Import\" section in preferences.<br><br><br><b>Privacy</b><br><br><br>All your data, except for the texts of the notes, if you are using an account, is stored only on the device. We do not collect any metadata or analytics other than crash logs. Your privacy is our top priority.<br><br><br><b>Feedback</b><br><br><br>Any thoughts on how to improve the app? Contact us via the feedback form in the settings.<br><br><br>We hope you enjoy using Wavenote!<br><br><br>Source code available on github.com]]></string>
    <string name="theme">Theme</string>
    <string name="version">Version</string>
    <string name="about">About Wavenote</string>
    <string name="publish">Publish</string>
    <string name="font_size">Font size</string>
    <string name="history">History</string>
    <string name="sort_tags_alphabetically">Sort alphabetically</string>
    <string name="appearance">Appearance</string>
    <string name="toggle_checklist">Toggle Checklist</string>
    <string name="description_delete_item">Delete item</string>
    <string name="passcode_change_passcode">Change passcode</string>
    <string name="passcode_preference_title">Passcode Lock</string>
    <string name="passcode_summary">Screenshots are disabled while passcode lock is on</string>
    <string name="passcode_turn_on">Turn passcode lock on</string>
    <string name="text_color">Text Color</string>
    <string name="export">Export</string>
    <string name="data">Data</string>
    <string name="import_notes">Import Notes</string>
    <string name="export_notes">Export Notes</string>
    <string name="photo">Photos</string>
    <string name="dictionary">Dictionary</string>
    <string name="dictionary_summary">Edit keywords list</string>
    <string name="keyword">Keyword</string>
    <string name="reset">Reset</string>
    <string name="type">Type</string>
    <string name="chords">Chords</string>
    <string name="transpose_up">Transpose Up</string>
    <string name="transpose_down">Transpose Down</string>
    <string name="add_keyword">Add Keyword</string>
    <string name="adjust_record">Adjust record</string>
    <string name="flip_vertical">Flip Vertical</string>
    <string name="flip_horizontal">Flip Horizontal</string>
    <string name="rotate_to_left">Rotate Left</string>
    <string name="rotate_to_right">Rotate Right</string>
    <string name="studio">Studio</string>
    <string name="adjust_success">Adjust Done!</string>
    <string name="adjust_delay_record_time_tip">Put on headset, click the button, follow the beat sound to click</string>
    <string name="adjust_record_reason">There is a time lag between the beginning of the synchronization of the sound and the beginning of the headset and recording, so a synchronization adjustment is required. Noted that whenever you change a new headset for recording, it is recommended to recalibrate, it would be better to synchronize the recording</string>
    <string name="syllable">Syllable</string>
    <string name="search">Search</string>
    <string name="news_title">What a news!</string>
    <string name="news_description">Hey! My name is Theo, I\'m the developer who made the Wavenote and I have something to talk about. Initially the Wavenote was a small project that I created for myself and my friends. For a long time, only 100 people used it, but recently the activity has increased greatly, and the application now has about 500 active users. It\'s still not much, but I\'m very glad that Wavenote helps you in life, that was the goal, so thanks. But I also know there are problems with it, some features may not work as expected and in the console every week I see crashes. For the most part, this is due to the fact that the application was based on Simplenote, so I ran into numerous restrictions on the choice and use of technologies.\n\nNow on to the news!\n\nDue to this I decided to make a new wavenote app with the latest technology, modern interface, stability and scalability, new features, like cloud synchronization. I want to apply all my experience that I got while working as a mobile developer in one of the leading IT companies. But it will cost me a lot of time and effort and I need to know if you really need it, so please take the survey below.\n\nStay in touch, Theo 🧡</string>
    <string name="news_answer_positive">It will be amazing, waiting for a new app</string>
    <string name="news_answer_neutral">I don\'t really need it, but I\'ll use the new app if it\'s better</string>
    <string name="news_answer_negative">I\'m not interested in</string>
    <string name="news_confirm">Confirm</string>
</resources>