<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/notes">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_key_condensed_note_list"
            android:title="@string/condensed_note_list"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/array_sort_order"
            android:entryValues="@array/array_sort_order_values"
            android:key="pref_key_sort_order"
            android:summary="%s"
            android:title="@string/sort_order"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/tags">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_key_sort_tags_alpha"
            android:title="@string/sort_tags_alphabetically" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_appearance_preferences"
        android:title="@string/appearance">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/array_theme_names"
            android:entryValues="@array/array_theme_values"
            android:key="pref_key_theme"
            android:summary="%s"
            android:title="@string/theme"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/editor">
        <ListPreference
            android:defaultValue="@integer/default_font_size"
            android:entries="@array/array_font_size"
            android:entryValues="@array/array_font_size_values"
            android:key="pref_key_font_size"
            android:summary="%s"
            android:title="@string/font_size"/>
        <Preference
            android:key="pref_key_dictionary"
            android:persistent="false"
            android:title="@string/dictionary"
            android:summary="@string/dictionary_summary"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_key_detect_syntax"
            android:title="@string/detect_keywords"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_key_detect_chords"
            android:title="@string/detect_chords"/>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_key_detect_links"
            android:title="@string/detect_links"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:persistent="false"
        android:title="@string/passcode_preference_title">

        <Preference
            android:key="@string/pref_key_passcode_toggle"
            android:persistent="false"
            android:title="@string/passcode_turn_on"
            android:summary="@string/passcode_summary"/>

        <Preference
            android:key="@string/pref_key_change_passcode"
            android:persistent="false"
            android:title="@string/passcode_change_passcode"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/data">
        <Preference
            android:title="@string/directory"
            android:key="pref_key_export_dir"
            android:summary="@string/path"/>
        <Preference
            android:title="@string/import_notes"
            android:key="pref_key_import_notes"/>
        <Preference
            android:title="@string/export_notes"
            android:key="pref_key_export_notes"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account">
        <Preference
            android:key="pref_key_authenticate"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/more_info">
        <Preference
            android:key="pref_key_about"
            android:persistent="false"
            android:title="@string/about"/>
        <Preference
            android:key="pref_key_developer"
            android:persistent="false"
            android:title="@string/developer_options"/>
        <Preference
            android:key="pref_key_build"
            android:persistent="false"
            android:selectable="false"
            android:title="@string/version"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>