<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_style"
        android:title="@string/text_color"
        android:icon="@drawable/ic_style_24dp"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_chords"
        android:icon="@drawable/av_chords_24dp"
        android:title="@string/chords"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_photos"
        android:icon="@drawable/av_photo_24dp"
        android:title="@string/photo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_studio"
        android:icon="@drawable/ic_studio_24dp"
        android:title="@string/studio"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_checklist"
        android:icon="@drawable/ic_checklist_24dp"
        android:title="@string/toggle_checklist"
        app:showAsAction="always" />

    <group android:id="@+id/group_organize_features">

        <item
            android:id="@+id/menu_pin"
            android:checkable="true"
            android:title="@string/pin"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_markdown"
            android:checkable="true"
            android:title="@string/markdown"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/group_ext_features">

        <item
            android:id="@+id/menu_syllable"
            android:checkable="true"
            android:title="@string/syllable"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_lookup"
            android:title="@string/words"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/group_info_features">

        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/information" />

        <item
            android:id="@+id/menu_history"
            android:title="@string/history"
            app:showAsAction="never">
        </item>

    </group>

    <group android:id="@+id/group_share_features">

        <item
            android:id="@+id/menu_share"
            android:title="@string/share"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_export"
            android:title="@string/export"
            app:showAsAction="never">
        </item>

    </group>


    <group android:id="@+id/group_publish_features">

        <item
            android:id="@+id/menu_publish"
            android:checkable="true"
            android:visible="false"
            android:title="@string/publish"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_copy"
            android:visible="false"
            android:title="@string/copy_link"
            app:showAsAction="never">
        </item>

    </group>

    <group android:id="@+id/group_note_features">

        <item
            android:id="@+id/menu_trash"
            android:title="@string/trash"
            app:showAsAction="never" />

    </group>

</menu>
