<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_transposedown"
        android:enabled="true"
        android:icon="@drawable/av_transpose_down"
        android:title="@string/transpose_down"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_transposeup"
        android:enabled="true"
        android:icon="@drawable/av_transpose_up_24dp"
        android:title="@string/transpose_up"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/av_search_24dp"
        android:title="@string/search_chords"
        app:showAsAction="always" />

</menu>
