<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/news_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_description"
                android:textColor="?attr/colorOnSurface"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_answer_positive" />

                <RadioButton
                    android:id="@+id/neutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_answer_neutral" />

                <RadioButton
                    android:id="@+id/negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_answer_negative" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:enabled="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_marginBottom="40dp"
                android:letterSpacing="0"
                android:text="@string/news_confirm"
                android:textAllCaps="false"
                app:cornerRadius="16dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>