<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:paddingTop="0dp"
    android:paddingBottom="@dimen/custom_vertical_space"
    tools:ignore="MissingConstraints">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/WaveStyle.InputLayoutStyle.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/custom_horizontal_space"
        android:layout_marginEnd="@dimen/custom_horizontal_space"
        android:layout_weight="1.5"
        android:hint="@string/keyword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/keyword_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/word"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/WaveStyle.BasicAutocompleteLayout.Outlined"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/type"
        android:text="@string/type">

        <AutoCompleteTextView
            android:id="@+id/keyword_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:padding="0dp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/keyword_trash"
        android:layout_width="@dimen/custom_icon_size"
        android:layout_height="@dimen/custom_icon_size"
        android:layout_gravity="bottom"
        android:layout_marginTop="1dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/description_delete_item"
        android:src="@drawable/av_trash_empty_blue_24dp" />

</LinearLayout>